Adding my info to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,34 @@
 </head>
 <body>
 
-  Welcome to the HTML Portfolio Project
+	<div class="header">
+	  	<h1>Lincoln Coe</h1>
+  		<h2>Quality Assurance Analyst</h2>
+	</div>
+	
+	<div class="tagline">
+		<h3>Sample Projects</h3>
+		<ul>
+		<li>Testing E-Commerce software on Chrome, Internet Explorer, FireFox and Safari</li>
+		<li>Testing Unity client through Web Player and WebGL</li>
+		<li>Testing Unity client on Windows, Mac OSX, Android and iOS devices</li>
+		<li>Overseeing Linux cache server development and testing</li>
+		</ul>
+	</div>
 
+	<div class="skills">
+		<h3>Skills</h3>
+		<ul>
+		<li>Experience on all major operating systems</li>
+		<li>Scrum Master experience</li>
+		<li>HTML</li>
+		</ul>
+	</div>
+	
+	<div class="contact">
+		<h3>Contact me!</h3>
+		<p>You can contact me <a href="https://twitter.com/lincolncoe">@lincolncoe</a></p>
+	</div>
+	
 </body>
 </html>
