Updating to add some skills

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 	
 	<div class="tagline">
 		<h3>Sample Projects</h3>
+		<p>Here are some projects I've worked on in the past.</p>
 		<ul>
 		<li>Testing E-Commerce software on Chrome, Internet Explorer, FireFox and Safari</li>
 		<li>Testing Unity client through Web Player and WebGL</li>
@@ -25,6 +26,7 @@
 
 	<div class="skills">
 		<h3>Skills</h3>
+		<p>Here is a short list of my skills</p>
 		<ul>
 		<li>Experience on all major operating systems</li>
 		<li>Scrum Master experience</li>
